# nl-bayes

./: CMakeLists.txt  Image.hpp  NLBayes.cpp  NLBayes.h  README.md  README.txt  main.cpp
NlBayes/: LibMatrix.cpp  NlBayes.cpp  NlBayes.h  smapa.h
Utilities/: LibImages.cpp  LibImages.h  Utilities.cpp  Utilities.h
